force-app/main/default/objects/Script__c/Script__c.object-meta.xml
<CustomObject>
    <label>Senaryo</label>
    <pluralLabel>Senaryolar</pluralLabel>
    <nameField>
        <label>Senaryo No</label>
        <type>AutoNumber</type>
        <displayFormat>SCR-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Call agent guidance scripts</description>
</CustomObject>