force-app/main/default/objects/Script__c/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <label>Yönlendirme</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>