force-app/main/default/objects/Script__c/fields/Info_Note__c.field-meta.xml
<CustomField>
    <fullName>Info_Note__c</fullName>
    <label>Bilgilendirme Notu</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>