force-app/main/default/objects/Script__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Sıra No</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>