force-app/main/default/objects/Script__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Sorulacak Soru</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>