force-app/main/default/objects/Script__c/fields/Related_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Reason__c</fullName>
    <label>İlgili Başvuru Nedeni</label>
    <type>Lookup</type>
    <referenceTo>Parameter__c</referenceTo>
    <relationshipName>Scripts</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>