force-app/main/default/objects/Script__c/fields/Unit_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type_Filter__c</fullName>
    <label>AC/DC Filtre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AC</fullName><default>false</default><label>AC</label></value>
            <value><fullName>DC</fullName><default>false</default><label>DC</label></value>
            <value><fullName>Tümü</fullName><default>false</default><label>Tümü</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>